Fixes button size and alignment issues with metadata and upload forms, refs #9569

--- a/app/assets/stylesheets/sufia/_buttons.scss
+++ b/app/assets/stylesheets/sufia/_buttons.scss
@@ -6,3 +6,8 @@
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.1);
   transition-delay: 0s;
 }
+
+.action-button {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
